# FastTask

./: README.md  pyproject.toml
example/: task_test.py
fasttask/: __init__.py  application.py
