[tool.poetry]
name = "fasttask"
version = "0.1.2"
description = "### FastTask is simple to fast run task"
authors = ["Euraxluo <euraxluo@qq.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
homepage = "https://github.com/Euraxluo/FastTask"
repository = "https://github.com/Euraxluo/FastTask"

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"